style: make top section resize according to image size

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <h1>Easy Remote Management</h1>
     <a href="" class="button">Download</a>
+
+    <img class="featured-image" src="images/featured.png" alt="">
   </div>
 </section>
 
