feat: add footer and transtions on links

--- a/index.html
+++ b/index.html
@@ -118,7 +118,21 @@
 </section>
 
 <footer>
+  <div class="container">
+    <div class="credits">
+      <a href="https://twitter.com/andrewmd5">@AndrewMD5</a>
+      <a href="https://twitter.com/frobthebuilder">@FrobTheBuilder</a>
+    </div>
 
+    <div class="social">
+      <a href="https://github.com/StrikeOrg/ulterius-client" class="github"></a>
+      <a href="https://twitter.com/ulteriusapp" class="twitter"></a>
+    </div>
+
+    <div class="love">
+      Ulterius . Made with <span class="love-icon"></span> in the <span class="us-icon"></span> 
+    </div>
+  </div>
 </footer>
 
 </body>
