fix: change fonts and make animation smoother

--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <!-- Typekit -->
-  <script src="https://use.typekit.net/oby2ooi.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
-  <!-- /Typekit -->
-
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600|Oswald' rel='stylesheet' type='text/css'>
 </head>
-<body class="tk-proxima-nova">
+
+<body>
 
 <section class="top">
   <div class="container">
@@ -130,7 +127,7 @@
     </div>
 
     <div class="love">
-      Ulterius . Made with <span class="love-icon"></span> in the <span class="us-icon"></span> 
+      Ulterius . Made with <span class="love-icon"></span> in the <span class="us-icon"></span>
     </div>
   </div>
 </footer>
